# databricks-job

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  tox.ini
databricks_job/: hello.py  hello_delta.py  parse_json.py  preparation.py
scripts/: db_cluster_init_script_TEMPLATE.sh  prepare_env_for_local_run.sh
tests/: conftest.py  test_hello.py
