[tool.poetry]
name = "databricks-job"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
pyspark = "3.3.2"

[tool.poetry.scripts]
job = 'databricks_job.hello:main'

[tool.poetry.group.dev.dependencies]
chispa = "^0.9.2"
pytest = "^7.4.0"
tox = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
