[tool.poetry]
name = "databricks-job"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
pyspark = "3.3.2"

[tool.poetry.scripts]
job = 'databricks_job.hello:main'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
# "d" extra is used by PyCharm
black = { extras = ["d"], version = "^23.7.0" }
ruff = "^0.0.287"
tox = "^4.11.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
chispa = "^0.9.2"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [
    "F", "E",  # Flake8
    "I",  # isort
]
fix = true

[tool.isort]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
